[#657] Corrected subnet bar label alignment

--- a/webui/src/app/subnet-bar/subnet-bar.component.sass
+++ b/webui/src/app/subnet-bar/subnet-bar.component.sass
@@ -11,7 +11,7 @@
 // percentage div
 .utilization .bar
   background-color: #abffa8
-  height: 20px
+  height: 1.5rem
   border-top-left-radius: 4px
   border-bottom-left-radius: 4px
 
